[tool.poetry]
name = "cloudia"
version = "0.1.0"
description = ""
authors = ["Germain LEFEBVRE"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.2"
mkdocstrings-python = "^1.7.5"
mkdocs-material-extensions = "^1.3.1"
mkdocs-autorefs = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
